# adopt-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-package-conda.yml  python-package.yml  ruff.yml
docs/: conf.py  index.rst
